@@ -1,7 +1,9 @@
 bfd_stdint.h
 bfdver.h
+elf32-aarch64.c
 elf32-ia64.c
 elf32-target.h
+elf64-aarch64.c
 elf64-ia64.c
 elf64-target.h
 peigen.c
