@@ -1,3 +1,7 @@
+2013-08-05  John Tytgat  <john@bass-software.com>
+
+	* po/POTFILES.in: Regenerate.
+
 2013-08-05  Eric Botcazou  <ebotcazou@adacore.com>
             Konrad Eisele  <konrad@gaisler.com>
 
