@@ -1,3 +1,8 @@
+2013-08-05  John Tytgat  <john@bass-software.com>
+
+	* po/BLD-POTFILES.in: Regenerate.
+	* po/SRC-POTFILES.in: Likewise.
+
 2013-07-31  John Tytgat  <john@bass-software.com>
 
 	PR ld/15787
